Changes 0.9.6 -> 0.9.6.1
* File descriptor leak when a persistent peer had a name that could not be
  looked up in DNS.
* DCC examples no longer announce credit-control application as a supported
  accounting application.

Changes 0.9.5 -> 0.9.6
* Handle SCTP association restart correctly.
* Node.findConnection() could return connection keys for connections there were
  not in the "open" state, potentially leading to NPE if a client immediately
  tried using it.
* Logging in Node changed a bit to make failure to load SCTP support look less
  dangerous.
* Do not attempt to send DWR on non-ready connections.
* Timeout&close non-ready connections.

Changes 0.9.4 -> 0.9.5
* SCTP support
* CER election phase could easily fail.
* Improved handling of M-bit in grouped AVPs in dk.i1.diameter.Utils
* Implemented DW interval jitter as per rfc3539 section 3.4.1 item 1

Changes 0.9.4 -> 0.9.4.1
* M-bit was not set on AVPs inside Vendor-Specific-Application-Id

Changes 0.9.3 -> 0.9.4
* Examines result-code in CEA and acts on it.
* Error-bit was not set in error responses for protocol errors.
* Vendor-specific accounting applications in the CE messages were incorrectly
  sent as vendor-specific authentication applications.
* Log vendor-specific applications during capability negotiation.
* Implemented peer authentication (see NodeValidator interface).
* CER with election-lost was missing the Result-Code AVP.

Changes 0.9.2 -> 0.9.3
* On shutdown peers were sent a DPR with disconnect-cause='busy' instead of the
  (correct) 'rebooting' cause.
* It is now possible to have a (small) grace period for making a clean
  shutdown of connections waiting for reception of DPA. This has mostly
  academic interest. The default is to send DPR and close immediately.
* An CEA was erroneously sent as response to an unhandled CEA
* Idle timeout changed from 1 hour to 7 days.
* NodeSettings.???watchdoginterval() and NodeSettings.???idleTimeout() added.